--- a/_posts/Blog/2017-09-06-AboutMe.md
+++ b/_posts/Blog/2017-09-06-AboutMe.md
@@ -5,11 +5,16 @@ description: 关于我自己
 category: blog
 ---
 
+工具、语言是思想的外衣，用高效的工具[Github](https://github.com/) +[Jekyll](http://jekyllrb.com/)搭建[独立博客](http://beiyuu.com/github-pages)，分享。
+
 
 
 简介
 
 - 微信公众号：
+- 邮箱:
+- 微信:
+
 
 
 
