--- a/_posts/Blog/2017-09-06-NowPage.md
+++ b/_posts/Blog/2017-09-06-NowPage.md
@@ -7,6 +7,8 @@ category: blog
 
 # 正在做 Now Page
 
+* 2017-09-07 学会了 git 操作
+* 2017-09-07 学习成为 Python 程序员
 * 2017-09-06 注册建站 linfeng365.com (设置好了 Github + Jekyll, Mweb + 七牛图床)
 * 为什么有“[now page](http://nownownow.com/about)”？
 
