--- a/_posts/Blog/2017-09-08-About-Git.md
+++ b/_posts/Blog/2017-09-08-About-Git.md
@@ -9,13 +9,13 @@ category: blog
 
 
 ## Git 学习资源
-Git 简明指南
+* Git 简明指南
 http://rogerdudler.github.io/git-guide/index.zh.html
 
-《廖雪峰的 Git 教程》
+* 《廖雪峰的 Git 教程》
 http://www.liaoxuefeng.com/wiki/0013739516305929606dd18361248578c67b8067c8c017b000
 
-快乐的 Linux 命令行 (TLCL)
+* 快乐的 Linux 命令行 (TLCL)
 http://billie66.github.io/TLCL/index.html
 
 >Git 和 GitHub 是独立的2个系统
