--- a/_posts/Blog/2017-09-06-NowPage.md
+++ b/_posts/Blog/2017-09-06-NowPage.md
@@ -13,3 +13,10 @@ category: blog
 * 为什么有“[now page](http://nownownow.com/about)”？
 
 
+目标:
+	- 《编程书》2017
+	- 《产品书》2017
+	- 《写作书》2018
+	- 《语言学习书》2018
+
+
