--- a/_posts/Blog/2017-09-08-About-Git.md
+++ b/_posts/Blog/2017-09-08-About-Git.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: About Git
+title: Git 学习总结
 description: Git 简单学习总结
-category: blog
+category: notes
 ---
 
 # GitHub: 学习 Git + GitHub + 命令行
