--- a/_posts/Blog/2017-12-13-Mac.md
+++ b/_posts/Blog/2017-12-13-Mac.md
@@ -24,7 +24,7 @@ category: blog
 * karabiner: 强大自定键盘;推荐类TouchCursor选项(rule:SpaceFN）让手不用移动到功能区。
 * MacBreakZ 5: 提醒每30分钟休息5分钟。
 * RescueTime: 统计所有软件使用的时间。→ 备选:Time Sink
-
+* Kawa: 一键切换输入法。https://github.com/utatti/kawa
 
 
 2016:
