--- a/_posts/Notes/2017-09-08-About-Git.md
+++ b/_posts/Notes/2017-09-08-About-Git.md
@@ -73,4 +73,13 @@ vi readme.txt (进入 vi 编辑)
 
 场景3：已经提交了不合适的修改到版本库时，想要撤销本次提交，参考[版本回退](https://www.liaoxuefeng.com/wiki/0013739516305929606dd18361248578c67b8067c8c017b000/0013744142037508cf42e51debf49668810645e02887691000)一节，不过前提是没有推送到远程库。
 
+## 更多资料
+  * 怼友荣:对于 git 个人觉得好用的教程
+    * [git - the simple guide - no deep shit!](https://rogerdudler.github.io/git-guide/)
+      * 当初没有意识到这个教程好用,是因为没有实际操作一遍,且有对于英文的畏惧
+    * [A Visual Git Reference](https://marklodato.github.io/visual-git-guide/index-en.html)
+      * 以图片的形式清晰展现你的每条命令到底发生了什么
+    * [Git - Reference](https://git-scm.com/docs)
+      * 官方文档,不必说了
+
 
