--- a/_posts/Blog/2018-06-08-ZQ.HowToStartProgramming.md
+++ b/_posts/Blog/2018-06-08-ZQ.HowToStartProgramming.md
@@ -7,7 +7,7 @@ category: blog
 
 # Zoom.Quiet: 如何开始编程
 
-摘录自 12:15分开始  [170411-mind-coding](https://www.lizhi.fm/3475110/2595774648088179718?u=2650671791068188716)
+摘录自 [170411-mind-coding](https://www.lizhi.fm/3475110/2595774648088179718?u=2650671791068188716) 12:15分开始  
 
 编程不像其它的工作,它倾向于纯理性的。非常纯粹的一个脑力劳动，这个脑力劳动，它有越来越多,越来越丰富，越来越友好的工具在支持。
 所以去编程会编程能编程而且编出可以用的软件来,是一个越来越容易事情。
