--- a/_posts/Notes/2018-06-16-Rime.md
+++ b/_posts/Notes/2018-06-16-Rime.md
@@ -22,7 +22,7 @@ Ctrl + Alt + `  重载输入法。(修改字库后需要重载生效)
 
 * 点击输入法 Settings 输入目录
 
-![ -w500](media/15291577413268/15291577428319.jpg)
+![Rime.jpg](https://github.com/linfeng365/linfeng365.github.io/blob/master/images/Rime.jpg?raw=true)
 
 
 * 修改
