--- a/_posts/Notes/2018-06-16-Rime.md
+++ b/_posts/Notes/2018-06-16-Rime.md
@@ -39,7 +39,11 @@ default.custom.yaml 文件
 * 修改
 wubi98.custom.yaml 文件
 
-> 配置 98五笔 输入法
+> 配置 98五笔 输入法  
+> 我用的 98五笔, 默认带 86五笔。  
+> 98五笔,和 86五笔可以认为没什么区别。    
+> 反正都可以自己改编码的。   
+>(一开始花好多时间看区别, 为了找 98字库了费了很多功夫…)
 
 ```
 patch:
