update about me

--- a/_posts/Blog/2017-09-06-about_me.md
+++ b/_posts/Blog/2017-09-06-about_me.md
@@ -9,13 +9,19 @@ category: blog
 
 
 
-简介:
+## 简介:
 
 单打独斗比合作风险高。
 
 
-联系:
+## 联系:
 
 - 邮箱:linfeng82@qq.com
 
+## 关注:
 
+- 豆瓣 http://www.douban.com/people/linfeng365/
+- 知乎 https://www.zhihu.com/people/linfeng365/activities
+- github https://github.com/linfeng365
+- weibo http://weibo.com/linfeng365
+- about me https://linfeng365.github.io/blog/about_me.html
