--- a/_posts/blog/2018-06-17-gtd.md
+++ b/_posts/blog/2018-06-17-gtd.md
@@ -5,7 +5,11 @@ description: Getting Things Done  选择下一步行动所依据的3个首要标
 category: blog
 ---
 
-# GTD 
+
+>复习一下
+>需要行动的事,理解是不够的
+>要行动才能学会
+>
 
 **摘自:** [尽管去做 - 维基百科](https://zh.wikipedia.org/wiki/%E5%B0%BD%E7%AE%A1%E5%8E%BB%E5%81%9A)
 
@@ -59,6 +63,8 @@ Allen认为我们的脑力上的“提醒系统”相当的低效，很少能够
 
 ![https://upload.wikimedia.org/wikipedia/commons/1/1b/GTDcanonical.png](https://upload.wikimedia.org/wikipedia/commons/1/1b/GTDcanonical.png)
 
+## GTD 工具推荐:
+[https://workflowy.com/invite/51cb4365.lnx](https://workflowy.com/invite/51cb4365.lnx)
 
 ChangeLog:  
 2018-06-17 20:42 linfeng365 整理自维基百科
