--- a/_posts/blog/2018-06-17-gtd.md
+++ b/_posts/blog/2018-06-17-gtd.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: GTD 
-description: Getting Things Done  选择下一步行动所依据的3个首要标准是情境、时间和精力
+description: Getting Things Done  -> 情境、时间和精力
 category: blog
 ---
 
