--- a/_posts/blog/2018-07-07-review2018_27w.md
+++ b/_posts/blog/2018-07-07-review2018_27w.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: review 2018.27
+title: review 2018.27w
 description: 27周回顾
 category: blog
 ---
 
 
-## 本周回顾  review 2018-07-07 
+## 本周回顾  2018-07-07 
 
 本周发现的问题
 
@@ -22,7 +22,7 @@ category: blog
 
 
 ## 凡物皆有缺点 缺点为改良之母  
-https://mp.weixin.qq.com/s/cIxlBBabz6A0KntD2ILlow
+[](https://mp.weixin.qq.com/s/cIxlBBabz6A0KntD2ILlow)
 
 * 没有东西是完美的，我们对完美的定义也在不断改变，也因此所有事物都会随时变化。完美器具并不存在完美只是一个词，并不是真实事物。
 * 器具不断变化的原因就在于:还不够令人满意。
@@ -30,7 +30,7 @@ https://mp.weixin.qq.com/s/cIxlBBabz6A0KntD2ILlow
 
 
 ## 笛卡尔:理性方法论  
-https://mp.weixin.qq.com/s/Ul9Z-LpeI0NaNijbLNPrSg
+[](https://mp.weixin.qq.com/s/Ul9Z-LpeI0NaNijbLNPrSg)
 
 > “笛卡尔，欧洲文艺复兴以来，第一个为人类争取并保证理性权利的人。”
 
@@ -41,7 +41,7 @@ https://mp.weixin.qq.com/s/Ul9Z-LpeI0NaNijbLNPrSg
 
 
 ## 笛卡尔:谈谈方法  (行为准则)
-https://mp.weixin.qq.com/s/rZGg-1JxlTWyx7-RtLPeOA
+[](https://mp.weixin.qq.com/s/rZGg-1JxlTWyx7-RtLPeOA)
 
 * 服从我国的法律和习俗，笃守我靠神保佑从小就领受的宗教，在其他一切事情上以周围最明智的人为榜样，遵奉他们在实践上一致接受的那些最合乎中道、最不走极端的意见，来约束自己。
 * 在行动上尽可能坚定果断，一旦选定某种看法，哪怕它十分可疑，也毫不动摇地坚决遵循，就像它十分可靠一样。
@@ -50,9 +50,8 @@ https://mp.weixin.qq.com/s/rZGg-1JxlTWyx7-RtLPeOA
 
 
 
-## 48个常见的心理误区
-聪明人的心理学 (豆瓣)  
-https://mp.weixin.qq.com/s/R2Cl_g9Jpyb2fdaBKOXhGw
+## 48个常见的心理误区 --聪明人的心理学 (豆瓣)  
+[](https://mp.weixin.qq.com/s/R2Cl_g9Jpyb2fdaBKOXhGw)
 
 * **预置**
 误解：你知道你会受影响，知道你的行为怎样受到影响。
@@ -65,7 +64,7 @@ https://mp.weixin.qq.com/s/R2Cl_g9Jpyb2fdaBKOXhGw
 
 
 ## 催化机制 - MBA智库百科  
-https://mp.weixin.qq.com/s/_ubm8WgpvWSjumvGLEd6hw
+[](https://mp.weixin.qq.com/s/_ubm8WgpvWSjumvGLEd6hw)
 
 * 催化机制是一项简单有效的管理工具，最初由吉姆·柯林斯(Jim Collins)提出，用以帮助组织把目标变为现实。
 
