--- a/_posts/blog/2017-12-13-period.md
+++ b/_posts/blog/2017-12-13-period.md
@@ -29,8 +29,10 @@ category: blog
 输入法设置为 中文下 位置 `;` 输出 `。`   
 
 **其它方案:**  
-用 aTxet 设置".."=>"。"  
-(不稳定,有时打不出)
+用 aTxet 设置 `..` =>`。`    
+可用于英文状态下,打出`。`  
+(aTxet 不稳定,有时打不出。近期升级频繁,希望能更好)
+
  
 
 ChangeLog:  
