--- a/_posts/blog/2018-07-27-resume.md
+++ b/_posts/blog/2018-07-27-resume.md
@@ -28,7 +28,8 @@ category: blog
 ## 教育经历
 
 * 16.10 - 18.07 这2年的学习(线上)  
-    * 自怼圈 项目管理
+    * 自怼圈 项目管理 GitHub
+    * 自怼圈 写作
     * 开智学堂 信息分析
     * 开智学堂 Python课程
     * 开智学堂 产品设计
