--- a/_posts/blog/2020-01-10-css.md
+++ b/_posts/blog/2020-01-10-css.md
@@ -16,7 +16,7 @@ category: blog
 ## refer
 
 - [CSS 教程 - 菜鸟教程](https://www.runoob.com/css/css-tutorial.html)
-- [HTML/CSS/JS - 在线工具 | 菜鸟工具](https://c.runoob.com/front-end/61)
+- [HTML/CSS/JS - 在线工具 - 菜鸟工具](https://c.runoob.com/front-end/61)
 - [CSS 实例 - 菜鸟教程](https://www.runoob.com/css/css-examples.html)
 - [CSS3 教程 - 菜鸟教程](https://www.runoob.com/css3/css3-tutorial.html)
 
