--- a/_posts/blog/2017-03-01-house.md
+++ b/_posts/blog/2017-03-01-house.md
@@ -10,13 +10,17 @@ category: blog
 
 亲自设计,装修的。房子的故事。
 
+分题 → [装修的技术](http://linfeng365.com/blog/house_tech.html)  
+分题 → [装修的艺术](http://linfeng365.com/blog/house_art.html)
+
 
 ## 设计:
 
 ## 理念:
 
-## 感想:
+治愈的家。
 
+## 感想:
 
 
 ## 故事:
