--- a/_posts/blog/2017-03-01-house.md
+++ b/_posts/blog/2017-03-01-house.md
@@ -18,7 +18,24 @@ category: blog
 
 ## 理念:
 
-治愈的家。
+治愈的家。  
+宝库。  
+创作的家。  
+学习的家。  
+
+
+
+
+- 阳光, 风, 沙发
+- 图书, 电影, 游戏
+- 工作室
+
+
+
+
+
+
+
 
 ## 感想:
 
