--- a/_posts/blog/2019-11-01-cli.md
+++ b/_posts/blog/2019-11-01-cli.md
@@ -24,6 +24,7 @@ category: blog
 oh-my-zsh 帮我们整理了一些常用的 zsh 扩展功能和主题。  
 我们无需自己去捣搞 zsh，直接用 oh-my-zsh 就足够了。
 
+- [Linux 文件基本属性 - 菜鸟教程](https://www.runoob.com/linux/linux-file-attr-permission.html)
 
 
 ## point
@@ -71,6 +72,7 @@ cd ~user_name // 切换家目录
 
 ```sh
 mkdir
+touch	
 cp
 mv
 rm
@@ -95,6 +97,9 @@ exit //退出
 
 ```
 
+```sh
+
+```
 
 ## 目录 Directories Found 
 ```
